<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_start_end"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/margin_start_end"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/currency_converter"
            app:titleCentered="true" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/textView"
        style="@style/TitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_bottom"
        android:text="@string/my_balances"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:ignore="TextContrastCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/balancesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/balances_margin_top"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:listitem="@layout/balance_item"/>

    <TextView
        android:id="@+id/textView2"
        style="@style/TitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/currency_margin_top"
        android:text="@string/currency_exchange"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/balancesRecyclerView"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/sellImageView"
        android:layout_width="@dimen/converter_icon_size"
        android:layout_height="@dimen/converter_icon_size"
        android:layout_marginTop="@dimen/currency_sell_margin_top"
        android:src="@drawable/baseline_arrow_circle_up_24"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:contentDescription="@string/sell_icon" />

    <TextView
        android:id="@+id/sellTextView"
        style="@style/BodyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sell"
        android:layout_marginStart="@dimen/converter_item_name_margin_start"
        app:layout_constraintBottom_toBottomOf="@+id/sellImageView"
        app:layout_constraintStart_toEndOf="@+id/sellImageView"
        app:layout_constraintTop_toTopOf="@+id/sellImageView" />

    <EditText
        android:id="@+id/sellMoneyValue"
        style="@style/BodySellMoneyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/rates_margin_start"
        android:autofillHints=""
        android:background="@null"
        android:hint="@string/money"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/sellImageView"
        app:layout_constraintEnd_toStartOf="@+id/sellRatesSpinner"
        app:layout_constraintTop_toTopOf="@+id/sellImageView"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck,TextContrastCheck" />

    <Spinner
        android:id="@+id/sellRatesSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/sell_currency_codes"
        app:layout_constraintBottom_toBottomOf="@+id/sellImageView"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toTopOf="@+id/sellImageView"
        tools:ignore="TouchTargetSizeCheck" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="@dimen/line_height"
        android:layout_marginTop="@dimen/line_margin_top"
        android:background="@color/grey"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/sellTextView"
        app:layout_constraintTop_toBottomOf="@+id/sellImageView" />

    <ImageView
        android:id="@+id/receiveImageView"
        android:layout_width="@dimen/converter_icon_size"
        android:layout_height="@dimen/converter_icon_size"
        android:layout_marginTop="@dimen/currency_receive_margin_top"
        android:contentDescription="@string/receive_icon"
        android:scaleType="fitCenter"
        android:src="@drawable/baseline_arrow_circle_down_24"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/receiveTextView"
        style="@style/BodyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/receive"
        android:layout_marginStart="@dimen/converter_item_name_margin_start"
        app:layout_constraintBottom_toBottomOf="@+id/receiveImageView"
        app:layout_constraintStart_toEndOf="@+id/receiveImageView"
        app:layout_constraintTop_toTopOf="@+id/receiveImageView" />

    <TextView
        android:id="@+id/receiveMoneyValue"
        style="@style/BodyReceiveMoneyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/rates_margin_start"
        android:text="@string/money"
        app:layout_constraintBottom_toBottomOf="@+id/receiveImageView"
        app:layout_constraintEnd_toStartOf="@+id/receiveRatesSpinner"
        app:layout_constraintTop_toTopOf="@+id/receiveImageView"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/receiveRatesSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/receive_currency_codes"
        app:layout_constraintBottom_toBottomOf="@+id/receiveImageView"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintTop_toTopOf="@+id/receiveImageView"
        tools:ignore="TouchTargetSizeCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:layout_marginStart="@dimen/submit_button_margin_start_end"
        android:layout_marginEnd="@dimen/submit_button_margin_start_end"
        android:layout_marginBottom="@dimen/margin_top_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
        app:layout_constraintStart_toStartOf="@+id/leftGuideline" />

</androidx.constraintlayout.widget.ConstraintLayout>